--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,35 @@
 h1{
     text-align: center;
 }
+
+.row > div{
+    float: left;
+    height: 100px; 
+    width:100px;
+    cursor: pointer;
+}
+
+.row {
+    clear:both;
+    margin: 0 auto;
+    width: 302px;
+}
+
+.top {
+    border-bottom: 1px black solid;
+}
+
+.bottom {
+    border-top: 1px black solid;
+}
+
+.left{
+    border-right: 1px black solid;
+}
+
+.right{
+    border-left: 1px black solid;
+}
+
+
+
